# sociare

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  package.json  rusty-hook.toml  schema.sh  setup.sh
.github/workflows/: rust.yml
migrations/2023-04-03-204302_create_users/: up.sql
migrations/2023-04-04-000000_create_groups/: up.sql
migrations/2023-04-04-000001_create_users/: up.sql
migrations/2023-04-04-000002_create_users_groups/: up.sql
migrations/2023-04-04-000003_create_messages/: up.sql
migrations/2023-04-04-000004_create_receipts/: up.sql
migrations/2023-04-04-000005_create_debts/: down.sql  up.sql
migrations/2023-04-04-000006_create_transactions/: up.sql
migrations/2023-04-04-000007_create_sessions/: down.sql  up.sql
migrations/2023-04-04-000008_create_group_events/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  util.rs
src/api/: endpoint.rs  index.rs  mod.rs
src/api/v1/: auth.rs  econ.rs  event.rs  group.rs  index.rs  message.rs  mod.rs  receipt.rs  transaction.rs  user.rs
src/util/: debt.rs  emoji.rs  group.rs  group_event.rs  message.rs  mod.rs  random_emoji.rs  receipt.rs  timestamp.rs  transaction.rs  unix_time.rs  user.rs  user_group.rs  user_session.rs
src/util/diesel/: debt.rs  mod.rs  (+6 more)
tests/: benchmark.rs  group.rs  lib.rs
tests/diesel/: debt.rs  group.rs  message.rs  mod.rs  receipt.rs  transactions.rs  user.rs
tests/util/: group.rs  mobilepay.rs  mod.rs
vite/: index.html  package.json  tsconfig.json  vite.config.ts
vite/public/: robots.txt
vite/src/: App.svelte  Main.svelte  main.ts
www/: index.html
(+65 files in other folders)
