[package]
name = "sociare"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emojis = "0.5.2"
rand = "0.8.5"
rusty-money = "0.4.1"
urlencoding = "2.1.2"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
poem = { version = "1.3.55", features = ["websocket", "static-files"]}
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
tracing-subscriber = "0.3.16"

[dependencies.uuid]
version = "1.3.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
rusty-hook = "^0.11.2"
